--- a/index.css
+++ b/index.css
@@ -40,6 +40,22 @@ text-align: center;
 
 background: rgb(255, 144, 14);
 }
+.btn2{
+    max-width: 100%;
+    padding: 12px 16px;
+    
+    border-radius: 8px;
+    font-size: 1rem;
+    justify-content: start;
+    color: rgb(255, 144, 14);
+font-family: Work Sans;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: left;
+
+}
 
 .hide{
     display: none;
@@ -76,7 +92,6 @@ text-align: center;
 gap: 1.5rem;
 flex-direction: column;
 display: flex;
-border: 2px solid red;
 
 
 }
@@ -103,4 +118,63 @@ text-align: center;
 }
 .banner-img{
     width: 100%;
+}
+
+/* -------------------------------futear------------------- */
+.futear-container{
+    max-width: 1440px;
+    height: auto;
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.futear-content{
+    max-width: 90%;
+    height: auto;
+    display: flex;
+    padding: 50px;
+    margin: 0 auto;
+    gap: 35px;
+}
+.futear-img{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 10px;
+    column-gap: 10px;
+    
+}
+.futear-img img{
+    max-width: 100%;
+    height: auto;
+}
+
+.futear-text{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: start;
+    gap: 25px;
+}
+.futear-text h3{
+    font-family: Work Sans;
+font-size: 40px;
+font-weight: 700;
+line-height: 45px;
+text-align: left;
+}
+.futear-text p{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
 }
