--- a/resposive.css
+++ b/resposive.css
@@ -3,6 +3,8 @@
         max-width: 80%;
         padding: 5px 12px;
     }
+
+    
     .navbar{
         display: block;
         align-items: center;
@@ -18,5 +20,32 @@
     }
     .banner-content{
         margin-top: 5px;
+    }
+
+    .futear-container{
+        display: block;
+    }
+    .futear-content{
+        display: block;
+        padding: 30px 0;
+    }
+    .futear-img{
+        width: 100%;
+        height: auto;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .futear-text{
+        margin-top: 25px;
+        align-items: center;
+       
+    }
+    .futear-text h3{
+        text-align: center;
+        font-size: 30px;
+        line-height: 32px;
+    }
+    .futear-text p{
+        text-align: center;
     }
 }
