--- a/index.css
+++ b/index.css
@@ -7,6 +7,15 @@
   font-weight: 400;
   font-style: normal;
 }
+.container{
+    max-width: 1440px;
+    height: auto;
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
 .d-flex{
     display: flex;
 }
@@ -177,4 +186,88 @@ font-weight: 400;
 line-height: 26px;
 letter-spacing: 0%;
 text-align: left;
+}
+
+
+/* enjoy--------------------------------------- */
+.enjoy-content{
+    width: 90%;
+    height: auto;
+    display: flex;
+    margin: 0 auto;
+    bottom: 0;
+    justify-content: space-between;
+    align-items: end;
+
+}
+
+.enjoy-left{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    
+
+
+}
+.enjoy-text h1{
+    color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 45px;
+font-weight: 700;
+line-height: 53px;
+letter-spacing: 0%;
+text-align: left;
+border-left: 3px solid rgb(255, 115, 0);
+padding-left: 20px;
+margin-bottom:  10px;
+
+}
+.enjoy-left p{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+}
+
+.enjoy-item-container{
+    margin: 25px 20px;
+
+}
+.enjoy-item-container h3{
+    color: #727272;
+}
+.enjoy-right{
+    max-width: 50%;
+    margin-left: 0 30px;
+    position: relative;
+    
+
+}
+.enjoy-right img{
+    width: 100%;
+    height: auto;
+    margin-right: -100px;
+    position: relative;
+}
+.enjoy-card{
+    background: rgb(255, 145, 0);
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 20px;
+    border-radius: 8px;
+    position: absolute;
+    left: -10%;
+    bottom: -5%;
+}
+
+
+.enjoy-card h3{
+    font-size: 35px;
 }
